# renew-glm

./: .gitignore  README.md  pyproject.toml
docs/: gen_readme_figures.py
src/renew_glm/: __init__.py  _irls.py
tests/: test_renew_glm.py
